# assembler-Labs-c-final-project

./: .gitignore  CMakeLists.txt  LICENSE  README.md  assembler  compiler.c  compiler.h  exomple  makefile  opcode.c  opcode.h  ps.as  ps1.as  ps2.am  ps2.as  ps2.ent  ps2.ext  ps2.ob  test  test.c  valgrind-out.txt  word.c  word.h
header/: consts.h  error.h  file.h  first_pass.h  line_data.h  line_node.h  macro.h  post_formating.h  second_pass.h  symbol_table.h  utilities.h  word_conversion.h  words_block.h
input_n_output/: invalid_input_1.as  invalid_input_2.am  invalid_input_3.am  invalid_input_3.as  invalid_input_4.as  invalid_input_5.am  valid_input_1.am  valid_input_1.ent  valid_input_1.ext  valid_input_2.am  valid_input_2.as  valid_input_2.ent  valid_input_2.ext  valid_input_2.ob  valid_input_3.am  valid_input_3.ent  valid_input_3.ext  valid_input_3.ob  valid_input_4.am  valid_input_4.as  valid_input_4.ob  valid_input_5.am  valid_input_5.ent  valid_input_5.ext  valid_input_5.ob
instruction/: addressing_modes.c  addressing_modes.h  opcode.h  operand_address.c  word.h
scripts/: assembler.c  assembler.h  binary_translator.c  binary_translator.h  boolean.c  boolean.h  compiler.c  compiler.h  consts.c  error.c  error.h  file.c  file.h  first_pass.c  hexadecimal_translator.c  hexadecimal_translator.h  line_data.c  line_node.c  macro.c  octal_translator.h  post_formating.c  second_pass.c  symbol_table.c  tag.h  utilities.c  utilitis.c  word_conversion.c  words_block.c
scripts/assembler/: assembler.c  assembler.h  directive.h  directive_line_type.c  line_data.c  line_data.h  opcode.c  opcode.h
scripts/data/: boolean.h  line.c  line.h  line_node.c  pos.c  pos.h  tag.c  tag.h
scripts/formating/: directive_line_type.c  directive_line_type.h  formating.c  formating.h  line.c  line.h  line_node.c  line_node.h  line_type.c  line_type.h  macro.c  macro.h  oparation_line_type.c  oparation_line_type.h  operation_line_type.c  operation_line_type.h  other.c  other.h
scripts/instruction/: addressing_modes.c  addressing_modes.h  instruction.h  instruction_node.c  instruction_node.h  opcode.c  opcode.h  operand_address.c  operand_address.h  symbol_node.c  symbol_node.h  symbol_table.c  symbol_table.h  word.c  word.h
scripts/systems/: am_files.c  am_files.h  error.c  error.h  file.c  (+1 more)
(+42 files in other folders)
